# quantum_walks_Igor

./: .gitignore  README.md  gleinig_costs.txt  notes_backprop.txt  pyproject.toml  qubitization_circuits.ipynb  requirements.txt  run_generate_states.py  run_state_preparation.py
data/qubits_10/: states.pkl
data/qubits_10/m_10/: cx_counts.csv
data/qubits_10/m_100/: cx_counts.csv
data/qubits_10/m_512/: cx_counts.csv
data/qubits_11/m_1024/: cx_counts.csv
data/qubits_11/m_11/: cx_counts.csv  states.pkl
data/qubits_11/m_121/: cx_counts.csv
data/qubits_12/m_12/: cx_counts.csv  states.pkl
data/qubits_12/m_144/: cx_counts.csv
data/qubits_2/m_2/: cx_counts.csv  states.pkl
data/qubits_3/: states.pkl
data/qubits_3/m_3/: cx_counts.csv
data/qubits_3/m_4/: cx_counts.csv  states.pkl
data/qubits_4/: states.pkl
data/qubits_4/m_16/: cx_counts.csv  states.pkl
data/qubits_4/m_4/: cx_counts.csv
data/qubits_4/m_8/: cx_counts.csv  states.pkl
data/qubits_5/: cx_counts.csv
data/qubits_5/m_16/: cx_counts.csv  states.pkl
data/qubits_6/: cx_counts.csv
data/qubits_7/: states.pkl
data/qubits_9/: states.pkl
data_2/clusters_16/: cx_counts.csv  states.pkl
data_2/clusters_2/: cx_counts.csv  states.pkl
data_2/clusters_32/: states.pkl
data_2/clusters_4/: cx_counts.csv  states.pkl
data_2/clusters_8/: cx_counts.csv  states.pkl
plots/: general.py  permutation_unitaries.py  quantum_walks.py
scripts/: run_state_preparation.py
src/: additional_optimizations.py  gleinig.py  hypercubes.py  permutation_circuit_generator.py  permutation_generator.py  qiskit_utilities.py  quantum_walks.py  state_circuit_generator.py  state_preparation.py  utilities.py  validation.py  walks_gates_conversion.py
src/quantum_walks/: __init__.py  gleinig.py  quantum_walks.py  state_circuit_generator.py
src/utilities/: general.py  quantum.py  validation.py
unit_tests/: test_end_to_end.py
(+96 files in other folders)
