[project]
name = "quantum_walks"
version = "0.1.0"
description = "Efficient sparse state preparation via quantum walks (https://doi.org/10.1038/s41534-025-01093-y)"
dynamic = ["dependencies"]
authors = [
    { name = "Alvin Gonzales, Rebekah Herrman, Igor Gaidai, Ji Liu, Zain Saleem, and Infleqtion quantum software", email = "superstaq@infleqtion.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "N/A" }
requires-python = ">=3.10.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/teaguetomesh/quantum_walks_Igor.git"

[tool.setuptools]
package-dir = {"" = "src"}
script-files = ["scripts/run_generate_states.py", "scripts/run_state_preparation.py"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantum_walks*"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

